# localmcp

./: README.md  mcp_database.sqlite3  ollama-client.py  pyproject.toml  server.py
