[project]
name = "localmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.2",
    "llama-index>=0.14.12",
    "llama-index-core>=0.14.12",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-tools-mcp>=0.4.5",
    "mcp>=1.25.0",
    "mcp-server>=0.1.4",
]
